--- a/pages/02.html
+++ b/pages/02.html
@@ -38,9 +38,9 @@
         <div class="content-container__grid">
             <div></div>
             <div class="content-container__grid__content">
-                <iframe src="https://cc-interactive-typography-01.vercel.app/" frameborder="0"></iframe>
+                <iframe src="https://cc-ui-anti-design-01.vercel.app/" frameborder="0"></iframe>
             </div>
-            <a href="https://cc-interactive-typography-01.vercel.app/">Open Link ↗</a>
+            <a href="https://cc-ui-anti-design-01.vercel.app/">Open Link ↗</a>
         </div>
 
     </div>
