correct logo and update link in readme

--- a/pages/01.html
+++ b/pages/01.html
@@ -16,7 +16,7 @@
         <div class="navbar__inside">
             <div class="navbar__inside__logo">
                 <a href="../index.html">
-                    <img src="favicon.ico" alt="Logo">
+                    <img src="../assets/favicon-96x96.png" alt="Logo">
                 </a>
             </div>
             <div class="navbar__inside__name">
