--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="navbar">
         <div class="navbar__inside">
             <div class="navbar__inside__logo">
-                <img src="favicon.ico" alt="Logo">
+                <img src="assets/favicon-96x96.png" alt="Logo">
             </div>
             <div class="navbar__inside__name">
                 <span>Creative Coding | Claudio Weckherlin | IAD 2024 ZHdK</span>
