--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container">
         <div class="container__grid">
             <div class="container__grid__elem">
-                <img src="assets/01/image_01.png" alt="" srcset="">
+                <img src="assets/01/01.gif" alt="" srcset="">
                 <div>
                     <h2>01_Interactive Type</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla sapiente ea a assumenda quae,
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="container__grid__elem">
-                <img src="assets/02/image_02.png" alt="">
+                <img src="assets/02/02.gif" alt="">
                 <div>
                     <h2>02_UI Anti Design</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla sapiente ea a assumenda quae,
