--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
             <div class="navbar__inside__links">
                 <div>
                     <ul>
-                        <li><a href="google.ch">Link 1</a></li>
-                        <li><a href="google.ch">Link 2</a></li>
-                        <li><a href="google.ch">Link 3</a></li>
+                        <li><a href="https://github.com/bonjourclaudio">GitHub</a></li>
+                        <li><a href="https://openprocessing.org/user/470863">OP</a></li>
                     </ul>
                 </div>
             </div>
