--- a/pages/01.html
+++ b/pages/01.html
@@ -15,7 +15,7 @@
     <div class="navbar">
         <div class="navbar__inside">
             <div class="navbar__inside__logo">
-                <a href="../index.html">
+                <a class="logo-link" href="../index.html">
                     <img src="../assets/favicon-96x96.png" alt="Logo">
                 </a>
             </div>
@@ -25,9 +25,8 @@
             <div class="navbar__inside__links">
                 <div>
                     <ul>
-                        <li><a href="google.ch">Link 1</a></li>
-                        <li><a href="google.ch">Link 2</a></li>
-                        <li><a href="google.ch">Link 3</a></li>
+                        <li><a href="https://github.com/bonjourclaudio">GitHub</a></li>
+                        <li><a href="https://openprocessing.org/user/470863">OP</a></li>
                     </ul>
                 </div>
             </div>
