add more project; border to projects

--- a/index.html
+++ b/index.html
@@ -37,10 +37,8 @@
                 <img src="assets/01/01.gif" alt="" srcset="">
                 <div>
                     <h2>01_Interactive Type</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla sapiente ea a assumenda quae,
-                        totam
-                        deserunt iusto sint perferendis deleniti earum quis similique incidunt repudiandae magni. Fugiat
-                        impedit sequi rem.
+                    <p>
+                        A Mondrian inspired interactive grid in the 3D space that allowes the user to shift each cell.
                     </p>
                     <br>
                     <a href="pages/01.html">→ Link</a>
@@ -50,12 +48,33 @@
                 <img src="assets/02/02.gif" alt="">
                 <div>
                     <h2>02_UI Anti Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla sapiente ea a assumenda quae,
-                        totam
-                        deserunt iusto sint perferendis deleniti earum quis similique incidunt repudiandae magni. Fugiat
-                        impedit sequi rem.</p>
+                    <p>
+                        (Not so) simple UX to control brightness and volume.
+                    </p>
                     <br>
                     <a href="/pages/02.html">→ Link</a>
+                </div>
+            </div>
+            <div class="container__grid__elem">
+                <img src="assets/03/03.gif" alt="">
+                <div>
+                    <h2>03_Interactive Type</h2>
+                    <p>
+                        TBD
+                    </p>
+                    <br>
+                    <a href="/pages/03.html">→ Link</a>
+                </div>
+            </div>
+            <div class="container__grid__elem">
+                <img src="assets/04/04.gif" alt="">
+                <div>
+                    <h2>04_Interactive Type</h2>
+                    <p>
+                        TBD
+                    </p>
+                    <br>
+                    <a href="/pages/04.html">→ Link</a>
                 </div>
             </div>
         </div>
