directly link to website instead of subpages

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         A Mondrian inspired interactive grid in the 3D space that allowes the user to shift each cell.
                     </p>
                     <br>
-                    <a href="pages/01.html">→ Link</a>
+                    <a href="https://cc-interactive-typography-01.vercel.app/">→ Link</a>
                 </div>
             </div>
             <div class="container__grid__elem">
@@ -52,7 +52,7 @@
                         (Not so) simple UX to control brightness and volume.
                     </p>
                     <br>
-                    <a href="/pages/02.html">→ Link</a>
+                    <a href="https://cc-ui-anti-design-01.vercel.app/">→ Link</a>
                 </div>
             </div>
             <div class="container__grid__elem">
@@ -63,7 +63,7 @@
                         TBD
                     </p>
                     <br>
-                    <a href="/pages/03.html">→ Link</a>
+                    <a href="https://cc-interactive-typography-02.vercel.app/">→ Link</a>
                 </div>
             </div>
             <div class="container__grid__elem">
@@ -74,7 +74,7 @@
                         TBD
                     </p>
                     <br>
-                    <a href="/pages/04.html">→ Link</a>
+                    <a href="https://cc-interactive-typography-03.vercel.app/">→ Link</a>
                 </div>
             </div>
         </div>
