--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div>
                     <h2>03_Interactive Type</h2>
                     <p>
-                        TBD
+                        Building and shaping words by moving the mouse.
                     </p>
                     <br>
                     <a href="https://cc-interactive-typography-02.vercel.app/">→ Link</a>
@@ -71,10 +71,10 @@
                 <div>
                     <h2>04_Interactive Type</h2>
                     <p>
-                        TBD
+                        Oscallating grid movement.
                     </p>
                     <br>
-                    <a href="https://cc-interactive-typography-03.vercel.app/">→ Link</a>
+                    <a href="https://cc-interactive-typography-04.vercel.app/">→ Link</a>
                 </div>
             </div>
         </div>
