--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div>
                     <h2>04_Interactive Type</h2>
                     <p>
-                        Oscallating grid movement.
+                        Oscillating grid movement.
                     </p>
                     <br>
                     <a href="https://cc-interactive-typography-04.vercel.app/">→ Link</a>
