--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     <div class="container">
         <div class="container__grid">
             <div class="container__grid__elem">
-                <img src="assets/01/01.gif" alt="" srcset="">
+                <a href="https://cc-interactive-typography-01.vercel.app/">
+                    <img src="assets/01/01.gif" alt="" srcset="">
+                </a>
                 <div>
                     <h2>01_Interactive Type</h2>
                     <p>
@@ -45,7 +47,9 @@
                 </div>
             </div>
             <div class="container__grid__elem">
-                <img src="assets/02/02.gif" alt="">
+                <a href="https://cc-ui-anti-design-01.vercel.app/">
+                    <img src="assets/02/02.gif" alt="">
+                </a>
                 <div>
                     <h2>02_UI Anti Design</h2>
                     <p>
@@ -56,7 +60,9 @@
                 </div>
             </div>
             <div class="container__grid__elem">
-                <img src="assets/03/03.gif" alt="">
+                <a href="https://cc-interactive-typography-02.vercel.app/">
+                    <img src="assets/03/03.gif" alt="">
+                </a>
                 <div>
                     <h2>03_Interactive Type</h2>
                     <p>
@@ -67,7 +73,9 @@
                 </div>
             </div>
             <div class="container__grid__elem">
-                <img src="assets/04/04.gif" alt="">
+                <a href="https://cc-interactive-typography-04.vercel.app/">
+                    <img src="assets/04/04.gif" alt="">
+                </a>
                 <div>
                     <h2>04_Interactive Type</h2>
                     <p>
