adjust preview texts for mobile

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="container__grid">
             <div class="container__grid__elem">
-                <a href="https://cc-interactive-typography-01.vercel.app/">
+                <a class="logo-link" href="https://cc-interactive-typography-01.vercel.app/">
                     <img src="assets/01/01.gif" alt="" srcset="">
                 </a>
                 <div>
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div class="container__grid__elem">
-                <a href="https://cc-ui-anti-design-01.vercel.app/">
+                <a class="logo-link" href="https://cc-ui-anti-design-01.vercel.app/">
                     <img src="assets/02/02.gif" alt="">
                 </a>
                 <div>
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <div class="container__grid__elem">
-                <a href="https://cc-interactive-typography-02.vercel.app/">
+                <a class="logo-link" href="https://cc-interactive-typography-02.vercel.app/">
                     <img src="assets/03/03.gif" alt="">
                 </a>
                 <div>
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="container__grid__elem">
-                <a href="https://cc-interactive-typography-04.vercel.app/">
+                <a class="logo-link" href="https://cc-interactive-typography-04.vercel.app/">
                     <img src="assets/04/04.gif" alt="">
                 </a>
                 <div>
